Fixed emails and added test bucket

--- a/src/iquitsupportit/supporter/templates/email/confirm.html
+++ b/src/iquitsupportit/supporter/templates/email/confirm.html
@@ -8,10 +8,10 @@
  <table border="0" cellpadding="0" cellspacing="0" width="500">
   <tr>
    <td>
-    <p>Thank you! I really appreciate your support.</p>
-    <p>You pledged to donate ${{ amount }} when I reach {{ days }} days without smoking.</p>
-    <p>Now, you need to confirm your pledge so I can send you a reminder and a link when I
-    reach this goal.</p>
+    <p>Thank you! We really appreciate your support.</p>
+    <p>You pledged to donate ${{ amount }} when {{ quitter }} reaches {{ days }} days without smoking.</p>
+    <p>Now, you need to confirm your pledge so we can send you a reminder and a link when {{ quitter }}
+    reaches this goal.</p>
    </td>
   </tr>
   <tr>
@@ -23,7 +23,7 @@
    <td>
     <p>Best regards,</p>
 
-    <p>{{ quitter }}</p>
+    <p>{{ signature }}</p>
    </td>
   </tr>
  </table>
