--- a/src/iquitsupportit/static/css/style.css
+++ b/src/iquitsupportit/static/css/style.css
@@ -288,10 +288,13 @@ body {
     margin: 20px;
 }
 
-#edit-box ul.errorlist {
+#password-box ul.errorlist, #edit-box ul.errorlist {
     color: rgb(202, 60, 60);
     list-style-type: none;
     font-size: 0.9em;
+    padding-left: 0em;
+}
+#edit-box ul.errorlist {
     padding-left: 11em;
 }
 
