--- a/src/iquitsupportit/supporter/templates/email/confirm.html
+++ b/src/iquitsupportit/supporter/templates/email/confirm.html
@@ -17,6 +17,8 @@
   <tr>
    <td>
       <p align="center"><a href="{{ url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">Confirm</a></p>
+      <br />
+      <p>or click the following link: {{ url }}</p>
    </td>
   </tr>
   <tr>
@@ -24,6 +26,7 @@
     <p>Best regards,</p>
 
     <p>{{ signature }}</p>
+    <p><a href="{{ website_url }}">{{ website_url }}</a></p>
    </td>
   </tr>
  </table>
