--- a/src/iquitsupportit/supporter/templates/email/honor.html
+++ b/src/iquitsupportit/supporter/templates/email/honor.html
@@ -21,12 +21,15 @@
       <a href="{{ pledge.beneficiary.donate_url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">Donate</a>
       <a href="{{ url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">Confirm your donation</a>
       </p>
+      <br />
+      <p>or click the following links: {{ pledge.beneficiary.donate_url }} and {{ url }}</p>
    </td>
   </tr>
   <tr>
    <td>
     <p>A big thank you!</p>
     <p>{{ signature }}</p>
+    <p><a href="{{ website_url }}">{{ website_url }}</a></p>
    </td>
   </tr>
  </table>
