--- a/src/iquitsupportit/quitter/templates/edit.html
+++ b/src/iquitsupportit/quitter/templates/edit.html
@@ -57,6 +57,11 @@
                         {{ profile_form.donation_percentage }}
                         {{ profile_form.donation_percentage.errors }}
                         </div>
+                        <div class="pure-control-group">
+                        {{ profile_form.currency.label_tag }}
+                        {{ profile_form.currency }}
+                        {{ profile_form.currency.errors }}
+                        </div>
                     </div>
                 </div>
             </fieldset>
