--- a/src/iquitsupportit/supporter/templates/email/confirm.html
+++ b/src/iquitsupportit/supporter/templates/email/confirm.html
@@ -9,8 +9,8 @@
   <tr>
    <td>
     <p>Thank you! We really appreciate your support.</p>
-    <p>You pledged to donate ${{ amount }} when {{ quitter }} reaches {{ days }} days without smoking.</p>
-    <p>Now, you need to confirm your pledge so we can send you a reminder and a link when {{ quitter }}
+    <p>You pledged to donate {{ quitter.profile.currency }}{{ amount }} when {{ quitter.first_name }} reaches {{ days }} days without smoking.</p>
+    <p>Now, you need to confirm your pledge so we can send you a reminder and a link when {{ quitter.first_name }}
     reaches this goal.</p>
    </td>
   </tr>
