--- a/src/iquitsupportit/quitter/templates/index.html
+++ b/src/iquitsupportit/quitter/templates/index.html
@@ -28,7 +28,7 @@
         <div id="beneficiary-box" class="{{ profile.current_beneficiary.banner_font_theme }} " {% if profile.current_beneficiary.banner %} style="background: url({{profile.current_beneficiary.banner.url}})" {% endif %}>
              <div id="beneficiary"><a href="{{ profile.current_beneficiary.url }}" target="_blank">{{ profile.current_beneficiary.name }}</a></div>
              with your help, I've raised
-             <div id="total-amount">${{ profile.total_amount|floatformat:"0" }}</div>
+             <div id="total-amount">{{ profile.currency }}{{ profile.total_amount|floatformat:"0" }}</div>
              <div id="copyright">{% if profile.current_beneficiary.banner_copyright %}&copy;{{ profile.current_beneficiary.banner_copyright }}{% endif %}</div>
         </div>
     </div>
@@ -154,10 +154,10 @@ $('#pledge-form').submit(function(e){
   google.setOnLoadCallback(drawChart);
   function drawChart() {
     var data = google.visualization.arrayToDataTable([
-      ['Origin', 'Amount (in $)'],
-      ['My donations',  {v: {{ profile.amount_pledged|floatformat:"0" }}, f: '${{ profile.amount_pledged|floatformat:"0" }}'}],
-      ['Your donations',  {v: {{ profile.supporter_donations }}, f: '${{ profile.supporter_donations }}'}],
-      ['Your pledges', {v: {{ profile.supporter_pledges }}, f: '${{ profile.supporter_pledges }}'}],
+      ['Origin', 'Amount (in {{ profile.currency }})'],
+      ['My donations',  {v: {{ profile.amount_pledged|floatformat:"0" }}, f: '{{ profile.currency }}{{ profile.amount_pledged|floatformat:"0" }}'}],
+      ['Your donations',  {v: {{ profile.supporter_donations }}, f: '{{ profile.currency }}{{ profile.supporter_donations }}'}],
+      ['Your pledges', {v: {{ profile.supporter_pledges }}, f: '{{ profile.currency }}{{ profile.supporter_pledges }}'}],
     ]);
 
   var options = {
