Added messages to tell users to check spam folder

--- a/src/iquitsupportit/quitter/templates/signup/email.html
+++ b/src/iquitsupportit/quitter/templates/signup/email.html
@@ -9,6 +9,7 @@
   <tr>
    <td>
     <p>Thank you!</p>
+    <p>First, please add {{ sitename }} to your contact list to avoid emails from us going to spam.</p>
     <p>To confirm your signup and your email address, please click on the following link:</p>
    </td>
   </tr>
