--- a/src/iquitsupportit/supporter/templates/email/confirm.html
+++ b/src/iquitsupportit/supporter/templates/email/confirm.html
@@ -9,6 +9,7 @@
   <tr>
    <td>
     <p>Thank you! We really appreciate your support.</p>
+    <p>First, please add {{ sitename }} to your contact list to avoid emails from us going to spam.</p>
     <p>You pledged to donate {{ quitter.profile.currency }}{{ amount }} when {{ quitter.first_name }} reaches {{ days }} days without smoking.</p>
     <p>Now, you need to confirm your pledge so we can send you a reminder and a link when {{ quitter.first_name }}
     reaches this goal.</p>
