--- a/src/iquitsupportit/home/templates/home/index.html
+++ b/src/iquitsupportit/home/templates/home/index.html
@@ -24,10 +24,17 @@
                         <h1>Quit smoking</h1>
                         <h2>Get support</h2>
                         <h3>Donate to your favorite charity</h3>
-                        <form class="pure-form" action="{% url "signup" %}" method="post">
+                        <form id="signup-form" class="pure-form" action="{% url "signup" %}" method="post">
                         {% csrf_token %}
                         {{ signup_form.email }}
                         <input type="submit" value="Sign up" id="home-signup" class="pure-button" />
+                        <div class="alternative">or <a href="#" id="login">login</a></div>
+                        </form>
+                        <form id="login-form" class="pure-form" action="{% url "login" %}" method="post">
+                        {% csrf_token %}
+                        {{ login_form.email }} {{ login_form.password }}
+                        <input type="submit" value="Login" id="home-login" class="pure-button"/>
+                        <div class="alternative">or <a href="#" id="signup">signup</a></div>
                         </form>
                     </div>
                 </div>
@@ -71,11 +78,33 @@
             </div>
             <div class="pure-g-r">
                 <div class="pure-u-1">
-                    <div id="footer">
-                        <strong>{{ sitename }}</strong> made by {{ contact.0 }} - {{ contact.1 }} - Charity bank photo <a href="http://www.flickr.com/photos/fhwrdh/" target="_blank">&copy;fhwrdh</a>
+                    <div id="share-buttons">
+                        <span class='st_facebook_large' displayText='Facebook'></span>
+                        <span class='st_twitter_large' displayText='Tweet'></span>
+                        <span class='st_googleplus_large' displayText='Google +'></span>
+                        <span class='st_pinterest_large' displayText='Pinterest'></span>
+                        <span class='st_email_large' displayText='Email'></span>
                     </div>
                 </div>
             </div>
+            <div class="pure-g-r">
+                <div class="pure-u-1">
+                    {% include "footer.html" %}
+                </div>
+            </div>
         </div>
+        <script type="text/javascript">
+        $('#login').click(function(e){
+           e.preventDefault();
+           $('#signup-form').hide();
+           $('#login-form').show();
+        });
+        $('#signup').click(function(e){
+            e.preventDefault();
+            $('#login-form').hide();
+            $('#signup-form').show();
+         });
+        </script>
+        {% include "scripts.html" %}
     </body>
 </html>
