--- a/src/iquitsupportit/templates/base.html
+++ b/src/iquitsupportit/templates/base.html
@@ -26,21 +26,7 @@
             {% if user.is_authenticated %}
                 <div id="loggedin-menu" class="menu"><a href="{% url "me" %}">View your page</a> <a href="{% url "edit" %}">Edit your page</a> <a href="{% url "logout" %}">Logout</a></div>
             {% else %}
-                <div id="login-link" class="menu">Quitting too? Want your own page? <a href="#" id="signup">Sign up</a> or <a href="#" id="login">Log in</a></div>
-                <div id="signup-box">
-                    <form class="pure-form" action="{% url "signup" %}" method="post">
-                    {% csrf_token %}
-                    {{ signup_form.email }}
-                    <input type="submit" value="Signup"/>
-                    </form>
-                </div>
-                <div id="login-box">
-                    <form class="pure-form" action="{% url "login" %}" method="post">
-                    {% csrf_token %}
-                    {{ login_form.email }} {{ login_form.password }}
-                    <input type="submit" value="Login"/>
-                    </form>
-                </div>
+                <div id="login-link" class="menu">Quitting too and want your own page? <a href="{% url "home" %}" id="signup">Sign up</a></div>
             {% endif %}
             </div>
         </div>
@@ -48,26 +34,10 @@
         {% endblock %}
         <div class="pure-g-r">
             <div class="pure-u-1">
-                <div id="footer">
-                    <strong>{{ sitename }}</strong> made by {{ contact.0 }} - {{ contact.1 }}
-                </div>
+                {% include "footer.html" %}
             </div>
         </div>
         </div>
-        <script type="text/javascript">
-        $('#signup').click(function(e){
-            e.preventDefault();
-            $('#login-box').slideUp(function(){
-                $('#signup-box').slideToggle();
-            });
-        });
-
-        $('#login').click(function(e){
-            e.preventDefault();
-            $('#signup-box').slideUp(function(){
-                $('#login-box').slideToggle();
-            });
-        });
-        </script>
+        {% include "scripts.html" %}
     </body>
 </html>
