--- a/src/iquitsupportit/home/templates/home/index.html
+++ b/src/iquitsupportit/home/templates/home/index.html
@@ -8,6 +8,12 @@
         <link rel="stylesheet" href="{% static "css/pure-min.css" %}">
         <link rel="stylesheet" href="{% static "css/style.css" %}">
         <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
+
+        <meta property="og:site_name" content="Help Me Quit">
+        <meta property="og:url" content="http://helpmequ.it">
+        <meta property="og:title" content="Quit smoking and help a charity">
+        <meta property="og:image" content="{% static "img/logo_square.jpg" %}">
+        <meta property="og:description" content="Quit smoking, get support, donate to your favorite charity">
     </head>
     <body>
         <div id="content" class="home">
