--- a/src/iquitsupportit/home/templates/home/index.html
+++ b/src/iquitsupportit/home/templates/home/index.html
@@ -49,7 +49,7 @@
                 <div class="pure-u-1-3">
                     <div id="home-block-left" class="home-block">
                         <h4>See what you save</h4>
-                        <p>The first days are the hardest. Get your profile page and track what you save, you'll quickly realize that every day is a reward.</p>
+                        <p>The first days are the hardest. Get your profile page and track what you save. You'll quickly realize that every day is a reward.</p>
                     </div>
                 </div>
                 <div class="pure-u-1-3">
