--- a/src/iquitsupportit/home/templates/home/index.html
+++ b/src/iquitsupportit/home/templates/home/index.html
@@ -55,13 +55,13 @@
                 <div class="pure-u-1-3">
                     <div id="home-block-center" class="home-block">
                         <h4>Donate to a charity</h4>
-                        <p>Not smoking again is the tough part. Donate to your favorite charity, it will make your decision even more meaningful.</p>
+                        <p>Not smoking again is the tough part. Donate to your favorite charity. It will make your decision even more meaningful.</p>
                     </div>
                 </div>
                 <div class="pure-u-1-3">
                     <div id="home-block-right" class="home-block">
                         <h4>Get support</h4>
-                        <p>Motivation is all you need, and when you'll get a friend pledging to donate $20 if you reach 30 days, you'll see how well it works.</p>
+                        <p>Motivation is all you need and when a friend pledges to donate $20 if you reach 30 days, you'll see how well it works.</p>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <div id="home-featured">
                         <h4>Featured profile</h4>
                         <img src="{{ featured.current_beneficiary.logo.url }}" />
-                        <p><a href="{% url "user" slug="francois" %}">{{ featured.user.first_name }}</a> has quit {{ featured.duration.days }} days ago and raised ${{ featured.total_amount|floatformat:"0" }} for <a href="{{ featured.current_beneficiary.url }}" target="_blank">{{ featured.current_beneficiary.name }}</a>.</p>
+                        <p><a href="{% url "user" slug="francois" %}">{{ featured.user.first_name }}</a> quit {{ featured.duration.days }} days ago and raised ${{ featured.total_amount|floatformat:"0" }} for <a href="{{ featured.current_beneficiary.url }}" target="_blank">{{ featured.current_beneficiary.name }}</a>.</p>
                         <div id="testimony-box"><span class="quote">&#x201c;</span>{{ featured.testimony }}<span class="quote">&#x201d;</span> - - {{ featured.user.first_name }}</div>
                     </div>
                 </div>
