Fix beneficiary form

--- a/src/iquitsupportit/quitter/templates/quitter/edit.html
+++ b/src/iquitsupportit/quitter/templates/quitter/edit.html
@@ -77,7 +77,7 @@
                         <br />
                         <div id="beneficiary-form">
                         {% with beneficiary_form as form %}
-                        {% include "beneficiary_form.html" %}
+                        {% include "quitter/beneficiary_form.html" %}
                         {% endwith %}
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                         <br />
                         <br />
                         {% with new_beneficiary_form as form %}
-                        {% include "beneficiary_form.html" %}
+                        {% include "quitter/beneficiary_form.html" %}
                         {% endwith %}
                     </div>
                 </div>
