--- a/src/iquitsupportit/home/templates/home/index.html
+++ b/src/iquitsupportit/home/templates/home/index.html
@@ -1,9 +1,10 @@
 {% load staticfiles %}
+{% load i18n %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Quit smoking and help a charity</title>
+        <title>{% trans "Quit smoking and help a charity" %}</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="{% static "css/pure-min.css" %}">
         <link rel="stylesheet" href="{% static "css/style.css" %}">
@@ -11,9 +12,9 @@
 
         <meta property="og:site_name" content="Help Me Quit">
         <meta property="og:url" content="http://helpmequ.it">
-        <meta property="og:title" content="Quit smoking and help a charity">
+        <meta property="og:title" content="{% trans "Quit smoking and help a charity" %}">
         <meta property="og:image" content="{% static "img/logo_square.jpg" %}">
-        <meta property="og:description" content="Quit smoking, get support, donate to your favorite charity">
+        <meta property="og:description" content="{% trans "Quit smoking, get support, donate to your favorite charity" %}">
     </head>
     <body>
         <div id="content" class="home">
@@ -27,20 +28,20 @@
             <div class="pure-g-r">
                 <div class="pure-u-1">
                     <div id="home-header">
-                        <h1>Quit smoking</h1>
-                        <h2>Get support</h2>
-                        <h3>Donate to your favorite charity</h3>
+                        <h1>{% trans "Quit smoking" %}</h1>
+                        <h2>{% trans "Get support" %}</h2>
+                        <h3>{% trans "Donate to your favorite charity" %}</h3>
                         <form id="signup-form" class="pure-form" action="{% url "signup" %}" method="post">
                         {% csrf_token %}
                         {{ signup_form.email }}
-                        <input type="submit" value="Sign up" id="home-signup" class="pure-button" />
-                        <div class="alternative">or <a href="#" id="login">login</a></div>
+                        <input type="submit" value="{% trans "Sign up" %}" id="home-signup" class="pure-button" />
+                        <div class="alternative">{% blocktrans with link=login_link|safe %}or {{ link }}{% endblocktrans %}</div>
                         </form>
                         <form id="login-form" class="pure-form" action="{% url "login" %}" method="post">
                         {% csrf_token %}
                         {{ login_form.email }} {{ login_form.password }}
-                        <input type="submit" value="Login" id="home-login" class="pure-button"/>
-                        <div class="alternative">or <a href="#" id="signup">signup</a></div>
+                        <input type="submit" value="{% trans "Login" %}" id="home-login" class="pure-button"/>
+                        <div class="alternative">{% blocktrans with link=signup_link|safe %}or {{ link }}{% endblocktrans %}</div>
                         </form>
                     </div>
                 </div>
@@ -48,36 +49,38 @@
             <div class="pure-g-r">
                 <div class="pure-u-1-3">
                     <div id="home-block-left" class="home-block">
-                        <h4>See what you save</h4>
-                        <p>The first days are the hardest. Get your profile page and track what you save. You'll quickly realize that every day is a reward.</p>
+                        <h4>{% trans "See what you save" %}</h4>
+                        <p>{% trans "The first days are the hardest. Get your profile page and track what you save. You'll quickly realize that every day is a reward." %}</p>
                     </div>
                 </div>
                 <div class="pure-u-1-3">
                     <div id="home-block-center" class="home-block">
-                        <h4>Donate to a charity</h4>
-                        <p>Not smoking again is the tough part. Donate to your favorite charity. It will make your decision even more meaningful.</p>
+                        <h4>{% trans "Donate to a charity" %}</h4>
+                        <p>{% trans "Not smoking again is the tough part. Donate to your favorite charity. It will make your decision even more meaningful." %}</p>
                     </div>
                 </div>
                 <div class="pure-u-1-3">
                     <div id="home-block-right" class="home-block">
-                        <h4>Get support</h4>
-                        <p>Motivation is all you need and when a friend pledges to donate $20 if you reach 30 days, you'll see how well it works.</p>
+                        <h4>{% trans "Get support" %}</h4>
+                        <p>{% trans "Motivation is all you need and when a friend pledges to donate $20 if you reach 30 days, you'll see how well it works." %}</p>
                     </div>
                 </div>
             </div>
             <div class="pure-g-r">
                 <div class="pure-u-1">
                     <div id="home-example"{% if featured.current_beneficiary.banner %} style="background: url({{featured.current_beneficiary.banner.url}})" {% endif %}>
-                        <a href="{% url "user" slug="francois" %}" class="pure-button">See an example</a>
+                        <a href="{% url "user" slug="francois" %}" class="pure-button">{% trans "See an example" %}</a>
                     </div>
                 </div>
             </div>
             <div class="pure-g-r">
                 <div class="pure-u-1">
                     <div id="home-featured">
-                        <h4>Featured profile</h4>
+                        <h4>{% trans "Featured profile" %}</h4>
                         <img src="{{ featured.current_beneficiary.logo.url }}" />
-                        <p><a href="{% url "user" slug="francois" %}">{{ featured.user.first_name }}</a> quit {{ featured.duration.days }} days ago and raised ${{ featured.total_amount|floatformat:"0" }} for <a href="{{ featured.current_beneficiary.url }}" target="_blank">{{ featured.current_beneficiary.name }}</a>.</p>
+                        <p>
+                        {% blocktrans with profile=featured.link|safe duration=featured.duration.days amount=featured.total_amount|floatformat:"0" beneficiary=featured.current_beneficiary.link|safe %}{{ profile }} quit {{ duration }} days ago and raised ${{ amount }} for {{ beneficiary }}.{% endblocktrans %}
+                        </p>
                         <div id="testimony-box"><span class="quote">&#x201c;</span>{{ featured.testimony }}<span class="quote">&#x201d;</span> - - {{ featured.user.first_name }}</div>
                     </div>
                 </div>
