--- a/src/iquitsupportit/quitter/templates/quitter/edit.html
+++ b/src/iquitsupportit/quitter/templates/quitter/edit.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% load i18n %}
 
 {% block title %}Edit your profile{% endblock %}
 {% block content %}
@@ -10,9 +11,9 @@
             <form class="pure-form pure-form-aligned" action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset>
-                <legend>Profile</legend>
+                <legend>{% trans "Profile" %}</legend>
                 <div class="pure-g-r">
-                    <div class="pure-u-1">
+                    <div class="pure-u-1-2">
                         <div class="pure-control-group">
                         {{ user_form.first_name.label_tag }}
                         {{ user_form.first_name }}
@@ -24,10 +25,17 @@
                         {{ profile_form.slug.errors }}
                         </div>
                     </div>
+                    <div class="pure-u-1-2">
+                        <div class="pure-control-group">
+                        {{ profile_form.language.label_tag }}
+                        {{ profile_form.language }}
+                        {{ profile_form.language.errors }}
+                        </div>
+                    </div>
                 </div>
             </fieldset>
             <fieldset>
-                <legend>Settings</legend>
+                <legend>{% trans "Settings" %}</legend>
                 <div class="pure-g-r">
                     <div class="pure-u-1-2">
                         <div class="pure-control-group">
@@ -66,7 +74,7 @@
                 </div>
             </fieldset>
             <fieldset>
-                <legend>Charity</legend>
+                <legend>{% trans "Charity" %}</legend>
                 <div class="pure-g-r">
                     <div class="pure-u-1-2">
                         <div class="pure-control-group">
@@ -82,7 +90,7 @@
                         </div>
                     </div>
                     <div class="pure-u-1-2">
-                        <div><em>Or create a new one</em></div>
+                        <div><em>{% trans "Or create a new one" %}</em></div>
                         <br />
                         <br />
                         {% with new_beneficiary_form as form %}
@@ -92,7 +100,7 @@
                 </div>
             </fieldset>
             <fieldset>
-                <legend>Testimony</legend>
+                <legend>{% trans "Testimony" %}</legend>
                 <div class="pure-g-r">
                     <div class="pure-u-2-5">
                         <div class="pure-control-group">
@@ -114,7 +122,7 @@
                         </div>
                         {% endif %}
                         <div class="pure-control-group">
-                        <label>or</label>
+                        <label>{% trans "or" %}</label>
                         </div>
                         <div class="pure-control-group">
                         {{ profile_form.picture.label_tag }}
@@ -124,7 +132,7 @@
                     </div>
                 </div>
             </fieldset>
-            <p><input type="submit" name="update" value="Update" /></p>
+            <p><input type="submit" name="update" value="{% trans "Update" %}" /></p>
             </form>
         </div>
     </div>
@@ -145,15 +153,15 @@ $('#id_current_beneficiary').change(function(e){
                 <fieldset>
                     <legend>
                     {% if user.has_usable_password %}
-                    Update your password
+                    {% trans "Update your password" %}
                     {% else %}
-                    Set your password
+                    {% trans "Set your password" %}
                     {% endif %}
                     </legend>
                     {{ password_form.new_password1 }} {{ password_form.new_password1.errors }}
                     {{ password_form.new_password2 }} {{ password_form.new_password2.errors }}
                 </fieldset>
-                <p><input type="submit" name="update_password" value="Update password" /></p>
+                <p><input type="submit" name="update_password" value="{% trans "Update password" %}" /></p>
             </form>
         </div>
     </div>
