--- a/src/iquitsupportit/templates/footer.html
+++ b/src/iquitsupportit/templates/footer.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div id="footer">
     <strong>{{ sitename }}</strong> made by {{ contact.0 }} - <a href="mailto:{{ contact.1 }}">{{ contact.1 }}</a> - Charity bank photo <a href="http://www.flickr.com/photos/fhwrdh/" target="_blank">&copy;fhwrdh</a>
 </div>
