--- a/src/iquitsupportit/quitter/templates/quitter/index.html
+++ b/src/iquitsupportit/quitter/templates/quitter/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}Support {{ profile.user.first_name }} for quitting smoking by supporting {{ profile.current_beneficiary.name }}{% endblock %}
+{% block title %}{% blocktrans with first_name=profile.user.first_name beneficiary=profile.current_beneficiary.name %}Support {{ first_name }} for quitting smoking by supporting {{ beneficiary }}{% endblocktrans %}{% endblock %}
 {% block content %}
 <div class="pure-g-r">
     <div class="pure-u-2-5">
@@ -29,7 +29,7 @@
         <div id="beneficiary-box" class="{{ profile.current_beneficiary.banner_font_theme }} " {% if profile.current_beneficiary.banner %} style="background: url({{profile.current_beneficiary.banner.url}})" {% endif %}>
              <div id="beneficiary"><a href="{{ profile.current_beneficiary.url }}" target="_blank">{{ profile.current_beneficiary.name }}</a></div>
              {% trans "With your help, I've raised:" %}
-             <div id="total-amount">{{ profile.currency }}{{ profile.total_amount|floatformat:"0" }}</div>
+             <div id="total-amount">{% blocktrans with currency=profile.currency amount=profile.total_amount|floatformat:"0" %}{{ currency }}{{ amount }}{% endblocktrans %}</div>
              <div id="copyright">{% if profile.current_beneficiary.banner_copyright %}&copy;{{ profile.current_beneficiary.banner_copyright }}{% endif %}</div>
         </div>
     </div>
@@ -167,9 +167,9 @@ $('#pledge-form').submit(function(e){
   function drawChart() {
     var data = google.visualization.arrayToDataTable([
       ['Origin', 'Amount (in {{ profile.currency }})'],
-      ['{% trans "My donations" %}',  {v: {{ profile.amount_pledged|floatformat:"0" }}, f: '{{ profile.currency }}{{ profile.amount_pledged|floatformat:"0" }}'}],
-      ['{% trans "Your donations" %}',  {v: {{ profile.supporter_donations }}, f: '{{ profile.currency }}{{ profile.supporter_donations }}'}],
-      ['{% trans "Your pledges" %}', {v: {{ profile.supporter_pledges }}, f: '{{ profile.currency }}{{ profile.supporter_pledges }}'}],
+      ['{% trans "My donations" %}',  {v: {{ profile.amount_pledged|floatformat:"0" }}, f: '{% blocktrans with currency=profile.currency amount=profile.amount_pledged|floatformat:"0" %}{{ currency }}{{ amount }}{% endblocktrans %}'}],
+      ['{% trans "Your donations" %}',  {v: {{ profile.supporter_donations }}, f: '{% blocktrans with currency=profile.currency amount=profile.supporter_donations %}{{ currency }}{{ amount }}{% endblocktrans %}'}],
+      ['{% trans "Your pledges" %}', {v: {{ profile.supporter_pledges }}, f: '{% blocktrans with currency=profile.currency amount=profile.supporter_pledges %}{{ currency }}{{ amount }}{% endblocktrans %}'}],
     ]);
 
   var options = {
