--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -69,7 +69,7 @@
             <div class="pure-g-r">
                 <div class="pure-u-1">
                     <div id="home-example"{% if featured.current_beneficiary.banner %} style="background: url({{featured.current_beneficiary.banner.url}})" {% endif %}>
-                        <a href="{% url "user" slug="francois" %}" class="pure-button">{% trans "See an example" %}</a>
+                        <a href="{% url "user" slug=featured.slug %}" class="pure-button">{% trans "See an example" %}</a>
                     </div>
                 </div>
             </div>
