--- a/src/quitter/templates/quitter/signup/email.html
+++ b/src/quitter/templates/quitter/signup/email.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
@@ -8,22 +9,21 @@
  <table border="0" cellpadding="0" cellspacing="0" width="500">
   <tr>
    <td>
-    <p>Thank you!</p>
-    <p>First, please add {{ sitename }} to your contact list to avoid emails from us going to spam.</p>
-    <p>To confirm your signup and your email address, please click on the following link:</p>
+    <p>{% trans "Thank you!" %}</p>
+    <p>{% trans "To confirm your signup and your email address, please click on the following link:" %}</p>
    </td>
   </tr>
   <tr>
    <td>
-      <p align="center"><a href="{{ url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">Confirm</a></p>
+      <p align="center"><a href="{{ url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">{% trans "Confirm" %}</a></p>
       <br />
-      <p>or click the following link: {{ url }}</p>
+      <p>{% blocktrans %}or click the following link: {{ url }}{% endblocktrans %}</p>
    </td>
   </tr>
   <tr>
    <td>
-    <p>After setting your password, you will be able to set up your page.</p>
-    <p>Good luck!</p>
+    <p>{% trans "After setting your password, you will be able to set up your page." %}</p>
+    <p>{% trans "Good luck!" %}</p>
     <p>{{ signature }}</p>
     <p><a href="{{ website_url }}">{{ website_url }}</a></p>
    </td>
