--- a/src/supporter/templates/email/honor.html
+++ b/src/supporter/templates/email/honor.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
@@ -8,26 +9,26 @@
  <table border="0" cellpadding="0" cellspacing="0" width="500">
   <tr>
    <td>
-    <p>Hey!</p>
-    <p>{{ pledge.beneficiary.quitter.first_name }} hasn't smoked for {{ pledge.days }} days.</p>
-    <p>You pledged to donate {{ pledge.beneficiary.quitter.profile.currency }}{{ pledge.amount }} to {{ pledge.beneficiary.name }}.</p>
+    <p>{% trans "Hi!" %}</p>
+    <p>{% blocktrans with first_name=pledge.beneficiary.quitter.first_name days=pledge.days %}{{ first_name }} hasn't smoked for {{ days }} days.{% endblocktrans %}</p>
+    <p>{% blocktrans with currency=pledge.beneficiary.quitter.profile.currency amount=pledge.amount beneficiary=pledge.beneficiary.name %}You pledged to donate {{ currency }}{{ amount }} to {{ beneficiary }}.{% endblocktrans %}</p>
 
-    <p>Follow these two steps and you're done:</p>
+    <p>{% trans "Follow these two steps and you're done:" %}</p>
    </td>
   </tr>
   <tr>
    <td>
       <p align="center">
-      <a href="{{ pledge.beneficiary.donate_url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">Donate</a>
-      <a href="{{ url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">Confirm your donation</a>
+      <a href="{{ pledge.beneficiary.donate_url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">{% trans "Donate" %}</a>
+      <a href="{{ url }}" style="background:#E6E6E6;color:#666;display:inline-block;width:auto; text-align:center;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;text-decoration:none;border:10px solid #E6E6E6;text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);">{% trans "Confirm your donation" %}</a>
       </p>
       <br />
-      <p>or click the following links: {{ pledge.beneficiary.donate_url }} and {{ url }}</p>
+      <p>{% blocktrans with donate_url=pledge.beneficiary.donate_url %}or click the following links: {{ donate_url }} and {{ url }}{% endblocktrans %}</p>
    </td>
   </tr>
   <tr>
    <td>
-    <p>A big thank you!</p>
+    <p>{% trans "A big thank you!" %}</p>
     <p>{{ signature }}</p>
     <p><a href="{{ website_url }}">{{ website_url }}</a></p>
    </td>
