--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -70,6 +70,7 @@
                 <div class="pure-u-1">
                     <div id="home-example"{% if featured.current_beneficiary.banner %} style="background: url({{featured.current_beneficiary.banner.url}})" {% endif %}>
                         <a href="{% url "user" slug=featured.slug %}" class="pure-button">{% trans "See an example" %}</a>
+                        <div id="copyright" class="{{ featured.current_beneficiary.banner_font_theme }}">{% if featured.current_beneficiary.banner_copyright %}&copy;{{ featured.current_beneficiary.banner_copyright }}{% endif %}</div>
                     </div>
                 </div>
             </div>
