--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -159,7 +159,8 @@ body {
     color: #000;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.7);
 }
-#beneficiary-box.light, #beneficiary-box.light a {
+#beneficiary-box.light, #beneficiary-box.light a,
+.light, .light a  {
     color: #FFF;
     text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);
 }
@@ -429,6 +430,7 @@ body {
     padding: 20px 40px;
     font-size: 2em;
     border-radius: 10px;
+    margin: 0 0 100px 0;
 }
 
 #home-featured {
