--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -13,7 +13,7 @@
         <meta property="og:site_name" content="Help Me Quit">
         <meta property="og:url" content="{{ website_url }}{% url "home" %}>
         <meta property="og:title" content="{% trans "Quit smoking and help a charity" %}">
-        <meta property="og:image" content="{% static "img/logo_square.jpg" %}">
+        <meta property="og:image" content="{% static "img/banner.jpg" %}">
         <meta property="og:description" content="{% trans "Quit smoking, get support, donate to your favorite charity" %}">
     </head>
     <body>
