--- a/src/quitter/templates/quitter/edit.html
+++ b/src/quitter/templates/quitter/edit.html
@@ -4,7 +4,7 @@
 
 {% block title %}Edit your profile{% endblock %}
 {% block content %}
-{% if user.has_usable_password %}
+{% if not is_email_auth or user.has_usable_password %}
 <div class="pure-g-r">
     <div class="pure-u-1">
         <div id="edit-box">
@@ -145,6 +145,7 @@ $('#id_current_beneficiary').change(function(e){
 });
 </script>
 {% endif %}
+{% if is_email_auth %}
 <div class="pure-g-r">
     <div class="pure-u-1">
         <div id="password-box">
@@ -166,4 +167,5 @@ $('#id_current_beneficiary').change(function(e){
         </div>
     </div>
 </div>
+{% endif %}
 {% endblock %}
