Added ref to repos and LICENSE

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,4 +1,4 @@
 {% load i18n %}
 <div id="footer">
-    <strong>{{ sitename }}</strong> made by {{ contact.0 }} - <a href="mailto:{{ contact.1 }}">{{ contact.1 }}</a> - Charity bank photo <a href="http://www.flickr.com/photos/fhwrdh/" target="_blank">&copy;fhwrdh</a>
+    <strong><a href="https://github.com/fgaudin/helpmequit">{{ sitename }}</a></strong> made by <a href="mailto:{{ contact.1 }}">{{ contact.0 }}</a> - Charity bank photo <a href="http://www.flickr.com/photos/fhwrdh/" target="_blank">&copy;fhwrdh</a>
 </div>
